# aplette

./: .gitignore  Makefile.in  README  configure
apl11/: Makefile
apl11/data/: DESIGN  Makefile  access.c  apl.h  bidx.c  colapse.c  copy.c  data_iterator.c  dupdat.c  erase.c  fetch.c  forloop.c  getdata.c  newdat.c  nlook.c  pop.c  purge_name.c  putdat.c  rbtree.c  s2vect.c  size.c  top.c
apl11/debug/: DESIGN  Makefile  char.h  code_dump.c  mem_dump.c  memory.h  opt_codes.h  parsedump.c  stack_dump.c  vars_dump.c
apl11/execute/: Makefile  ex_botch.c  ex_cdyad.c  ex_ddyad.c  ex_dscal.c  ex_mdyad.c  execute.c
apl11/format/: Makefile  ex_dfmt.c  ex_mfmt.c  fp2char.c  fp2char_paded.c  fp_dfmt.c  fp_digits.c  fp_mfmt.c
apl11/ibeam/: Makefile  ex_dibm.c  ex_mibm.c
apl11/include/: apl.h  char.h  config.h.in  data.h  debug.h  execute.h  format.h  main.h  makefile.common.in  memory.h  mixed_dyadic.h  mixed_monadic.h  oper_dyadic.h  opt_codes.h  parser.h  print.h  userfunc.h  utility.h  work_space.h
apl11/main/: DESIGN.Context  Makefile  apl.c  apl.h  ascii_input.c  ascii_input.h  config.h  exit.c  exit.h  getinput.c  history.c  history.h  mainloop.c  patchlevel.h
apl11/memory/: DESIGN  Makefile  afreset.c  alloc.c  aplfree.c  memory.h
apl11/mixed_dyadic/: Makefile  ex_base.c  ex_ddom.c  ex_deal.c  ex_diot.c  ex_eps.c  ex_index.c  ex_rep.c  ex_rot.c  ex_tak_drp.c  ex_trn.c
apl11/mixed_monadic/: Makefile  ex_execute.c  ex_gdd.c  ex_gdu.c  ex_mdom.c  ex_menc.c  ex_rand.c  ex_rev.c  gd.c  gd.h
apl11/oper_dyadic/: Makefile  ex_asgn.c  ex_iprod.c  ex_oprod.c
apl11/oper_monadic/: Makefile  ex_com.c  ex_exd.c  ex_red.c  ex_scan.c
apl11/parser/: Makefile  alpha.c  alpha.h  apl.y  apl.y.original  char.h  compile_new.c  compile_old.c  digit.c  genlab.c  getnam.c  getnum.c  getquad.c  invert.c  lastcode.c  local_parser.h  name.c  parser.h  table_comm.c  table_oper.c  table_quad.c  yyerror.c  yylex.c
apl11/print/: DESIGN  Makefile  c_overbar.c  ex_hprint.c  ex_print.c  format.h  fp_print.c  local_print.h  lt_print.c  print.c
apl11/quad_func/: Makefile  apl.h  eval_qlx.c  ex_ap.c  ex_chdir.c  ex_close.c  ex_create.c  ex_crp.c  ex_dup.c  ex_ex.c  ex_exec.c  ex_exit.c  ex_fdef.c  ex_float.c  ex_fork.c  ex_kill.c  ex_nc.c  ex_nl.c  ex_open.c  ex_pipe.c  ex_rd.c  ex_read.c  ex_run.c  ex_seek.c  ex_signl.c  ex_unlink.c  ex_wait.c  ex_write.c  iofname.c
apl11/quad_var/: Makefile  char.h  ex_qai.c  ex_qav.c  ex_qct.c  ex_qio.c  ex_qlx.c  ex_qpp.c  ex_qpw.c  ex_qquad.c  ex_qts.c  ex_quad.c
apl11/scalar_dyadic/: Makefile  ex_add.c  ex_and.c  ex_cir.c  ex_comb.c  ex_div.c  ex_eq.c  ex_ge.c  ex_gt.c  ex_le.c  ex_log.c  ex_lt.c  ex_max.c  ex_min.c  ex_minus.c  ex_mod.c  ex_mul.c  ex_nand.c  ex_ne.c  ex_nor.c  ex_or.c  ex_plus.c  ex_pwr.c  ex_sub.c
apl11/scalar_monadic/: Makefile  ex_abs.c  ex_ceil.c  ex_exp.c  ex_fac.c  ex_floor.c  ex_loge.c  ex_not.c  ex_pi.c  ex_recip.c  ex_sgn.c
apl11/struct_dyadic/: Makefile  ex_cat.c  ex_drho.c
apl11/struct_monadic/: Makefile  ex_miot.c  ex_mrho.c  ex_rav.c
apl11/sys_command/: Makefile  ex_list.c  ex_list.h  ex_prws.c  ex_prws.h  ex_shell.c  ex_shell.h  ex_syscom.c  listdir.c
apl11/userfunc/: Makefile  badfnsv.c  catcode.c  csize.c  ex_arg1.c  ex_arg2.c  ex_auto.c  ex_br.c  ex_br0.c  ex_fun.c  ex_ibr.c  ex_ibr0.c  ex_label.c  ex_nilret.c  ex_rest.c  funcomp.c  fundef.c  funedit.c  funread.c  funwrite.c  opt_codes.h  reverse.c  sichk.c  tback.c
apl11/utility/: Makefile  checksp.c  errors.c  extend.c  fappend.c  file.c  fix.c  floating.c  fuzz.c  gamma.c  iodone.c  map.c  optable.c  readline.c  scalar.c  signals.c  topfix.c
apl11/work_space/: Makefile  fdat.c  fdat.h  ws_clear.c  ws_load.c  ws_save.c
autoconf/: DESIGN  configure  configure.in
docs/: Copyright  License.original  README
docs/install_guide/: Installation  editors  pagers  printer  terminals
docs/project/: Announce  BugList  Credits  Resources  Support  ToDo  WhatsNew  openapl.lsm
docs/user_guide/: IBeams  Printing  QuadFunc  QuadVar  README  Readline  SandBox  SysCommands  UserFunc  WorkSpaces
man/: apl.1  apl11.1  apl2epson.1  apl2gs.1
printer/: DESIGN  apl2741.fnt  apl2epson.in  apl2gs.in
qa/: DESIGN  Makefile.in  debug.inp  debug.ref  encode.aref  encode.inp  encode.ref  errors.inp  errors.ref  format.ainp  format.inp  format.ref  ibeams.inp  ibeams.ref  mixed_dyadic.ainp  mixed_dyadic.aref  mixed_dyadic.inp  mixed_dyadic.ref  mixed_monadic.ainp  mixed_monadic.aref  mixed_monadic.ascii_out  mixed_monadic.inp  mixed_monadic.ref  nesting.inp  nesting.ref  nesting.ws  printing.inp  printing.ref  quad_fns.inp  quad_fns.ref  quad_fx.ainp  quad_fx.aref  quad_fx.inp  quad_fx.ref  quad_vars.inp  quad_vars.ref  quad_vars.stdin  scalar_dyadic.inp  scalar_dyadic.ref  scalar_monadic.inp  (+46 more)
qa/clean_dir/: exp  l1a  lemming  makeN.ws  nilret1  onearg  pfoo  twoargs  ulam.ws  withret1
script/: apl-mode.el  apl-setup.in  apl-setup.opt3a  apl-setup.opt4a  apl.in  apl.opt1a  apl.opt1b  apl.opt2a  aplrc.in  aplrc.opt5a
source/: Makefile  t1.sh  t2.sh
source/Docs/: Internals  global_replace
source/data/: DESIGN  Makefile  access.c  bidx.c  copy.c  data_iterator.c  dupdat.c  erase.c  fetch.c  getdata.c  newdat.c  nlook.c  pop.c  purge_name.c  putdat.c  rbtree.h  s2vect.c  size.c  symtab.c  top.c
source/debug/: DESIGN  Makefile  code_dump.c  mem_dump.c  memory.h  parsedump.c  stack_dump.c  vars_dump.c
source/execute/: ex_botch.c  ex_cdyad.c  ex_ddyad.c  ex_dscal.c  ex_mdyad.c  execute.c
source/format/: Makefile  ex_dfmt.c  ex_mfmt.c  fp2char.c  fp2char_paded.c  fp_dfmt.c  fp_digits.c  fp_mfmt.c
source/ibeam/: Makefile  ex_dibm.c  ex_mibm.c
source/include/: apl.h  ascii_input.h  char.h  data.h  debug.h  execute.h  format.h  main.h  memory.h  mixed_dyadic.h  opt_codes.h  parser.h  patchlevel.h  print.h  quad_func.h  quad_var.h  userfunc.h  utility.h  version.h  work_space.h
source/main/: DESIGN.Context  Makefile  apl.c  ascii_input.c  ascii_input.h  exit.c  getinput.c  getinput.h  mainloop.c
terminal/: 000-255  000-255.txt  Design.Notes
(+196 files in other folders)
